manifests/writer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: writer-deployment
  labels:
    app: writer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: writer
  template:
    metadata:
      labels:
        app: writer
    spec:
      containers:
      - name: writer
        image: writer-image:2
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: writer
  labels:
    app: writer
spec:
  selector:
    app: writer
  ports:
    - protocol: TCP
      name: metrics
      port: 8000
      targetPort: 8000
