manifests/reader.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reader-deployment
  labels:
    app: reader
spec:
  replicas: 3
  selector:
    matchLabels:
      app: reader
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: reader
    spec:
      containers:
      - name: reader
        image: reader-image:2
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
        - containerPort: 8000
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - kind-worker
                - kind-worker2
                - kind-worker3
---
apiVersion: v1
kind: Service
metadata:
  name: reader
  labels:
    app: reader
spec:
  selector:
    app: reader
  ports:
    - protocol: TCP
      name: web
      port: 8080
      targetPort: 8080
    - protocol: TCP
      name: metrics
      port: 8000
      targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reader-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /reader
        pathType: Prefix
        backend:
          service:
            name: reader
            port:
              number: 8080
